# worldline-engine

./: .gitignore  AGENTS.project.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: WORLDLINE_ECOSYSTEM_PLAN.md
examples/: counter_simulation.py
scripts/: generate_figures.py  seed_memories.py
src/worldline_engine/: __init__.py  controllers.py  events.py  memory.py  protocols.py  runtime.py  scheduler.py  stores.py  vector.py  worlds.py
src/worldline_engine/providers/: __init__.py  base.py  deepseek.py  registry.py
tests/: test_memory.py  test_providers.py  test_runtime.py
