[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "worldline-engine"
version = "0.2.0"
description = "Deterministic, replayable discrete-time multi-agent simulation engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Worldline Engine Contributors" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/worldline_engine"]
